RESOLVED FIXED151789
REGRESSION(r192753): Remote Web Inspector: RemoteInspector::sendMessageToRemote with null connection
https://bugs.webkit.org/show_bug.cgi?id=151789
Summary REGRESSION(r192753): Remote Web Inspector: RemoteInspector::sendMessageToRemo...
Joseph Pecoraro
Reported 2015-12-02 19:40:58 PST
* SUMMARY Remote Web Inspector: RemoteInspector::sendMessageToRemote with null connection. * STEPS TO REPRODUCE 1. Launch Application with JSContext 2. Launch Safari 3. Safari: Develop > Current Machine > App > Context 4. Close Remote Inspection window while doing stuff => Possible CRASH * NOTES Previously the connection was null checked (as it could have been removed by another thread). It seems we lost the null check. (lldb) p connection (Inspector::RemoteConnectionToTarget *) $3 = 0x0000000000000000 > void RemoteInspector::sendMessageToRemote(unsigned identifier, const String& message) > { > ... > auto connection = m_connectionMap.get(identifier); > > NSDictionary *userInfo = @{ > WIRRawDataKey: [static_cast<NSString *>(message) dataUsingEncoding:NSUTF8StringEncoding], > WIRConnectionIdentifierKey: connection->connectionIdentifier(), > WIRDestinationKey: connection->destination() > }; > ... > }
Attachments
[PATCH] Proposed Fix (1.48 KB, patch)
2015-12-02 19:42 PST, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2015-12-02 19:41:12 PST
Joseph Pecoraro
Comment 2 2015-12-02 19:42:53 PST
Created attachment 266501 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2015-12-03 11:33:30 PST
Comment on attachment 266501 [details] [PATCH] Proposed Fix Clearing flags on attachment: 266501 Committed r193355: <http://trac.webkit.org/changeset/193355>
WebKit Commit Bot
Comment 4 2015-12-03 11:33:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.