REGRESSION:(r192753): Remote Web Inspector: RemoteInspector::sendMessageToRemote with null connection https://bugs.webkit.org/show_bug.cgi?id=151789

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-12-03
Reviewed by Timothy Hatcher.

* inspector/remote/RemoteInspector.mm:
(Inspector::RemoteInspector::sendMessageToRemote):
Bail if the connection is no longer available. It may have
been closed remotely.

Canonical link: https://commits.webkit.org/169946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193355 268f45cc-cd09-0410-ab3c-d52691b4dbfc